Fixing overflow bug for tooltip

--- a/app/assets/stylesheets/pages/_notebooks.scss
+++ b/app/assets/stylesheets/pages/_notebooks.scss
@@ -86,6 +86,19 @@
 
 }
 
+#notebook_content {
+  flex: 0.92;
+  position: relative;
+  overflow-y: auto;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  transform: translateZ(0);
+}
+
+#notebook_content::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
 #notebooks {
   max-height: 20em;
   overflow-y: auto;
