--- a/app/assets/stylesheets/pages/_notes.scss
+++ b/app/assets/stylesheets/pages/_notes.scss
@@ -22,6 +22,9 @@
     width: 100%;
     display: inline-block;
     padding: 0.4em 0.8em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &:hover {
